Add unhighlighting labels.

--- a/www/index.html
+++ b/www/index.html
@@ -134,7 +134,7 @@
      <div class="col-md-6"> 
       <div class="btn-group btn-group-justified" role="group" aria-label="...">
         <div class="btn-group" role="group">
-          <button type="button" class="btn btn-default" onclick="highlightingNodes()">Highlight</button>
+          <button id="b_highlightingNodes" type="button" class="btn btn-default" onclick="highlightingNodes()">Highlight</button>
         </div>
         <div class="btn-group" role="group">
           <button type="button" class="btn btn-default" onclick="hidingNodes()">Hide</button>
