Remove 'more' and 'USERID' on UI

--- a/www/index.html
+++ b/www/index.html
@@ -115,7 +115,7 @@
       <li role="presentation" class="active"><a href="#graph" aria-controls="graph" role="tab" data-toggle="tab">Graph</a></li>
       <li role="presentation"><a href="#json" aria-controls="json" role="tab" data-toggle="tab">JSON</a></li>
       <li role="presentation"><a href="#summary" aria-controls="summary" role="tab" data-toggle="tab">Summary</a></li>
-      <li role="presentation"><a href="#more" aria-controls="more" role="tab" data-toggle="tab">More ...</a></li>
+      <!-- <li role="presentation"><a href="#more" aria-controls="more" role="tab" data-toggle="tab">More ...</a></li> -->
     </ul>
 
     <!-- Tab panes -->
