New requirement of YeePay Project.

--- a/www/index.html
+++ b/www/index.html
@@ -115,7 +115,7 @@
       <li role="presentation" class="active"><a href="#graph" aria-controls="graph" role="tab" data-toggle="tab">Graph</a></li>
       <li role="presentation"><a href="#json" aria-controls="json" role="tab" data-toggle="tab">JSON</a></li>
       <li role="presentation"><a href="#summary" aria-controls="summary" role="tab" data-toggle="tab">Summary</a></li>
-      <li role="presentation"><a href="#more" aria-controls="more" role="tab" data-toggle="tab">More ...</a></li>
+      <!--li role="presentation"><a href="#more" aria-controls="more" role="tab" data-toggle="tab">More ...</a></li-->
     </ul>
 
     <!-- Tab panes -->
@@ -125,6 +125,8 @@
         <br />
         <div align='left' id="prototype1" style="float:left;">
         </div>
+        <!--iframe id="desc_iframe" src="desc.html"></iframe-->
+        <pre id="desc_iframe" style="float:left;overflow:auto; margin-left:5px"></pre>
       </div>
 
       <!-- Tab Json -->
@@ -157,7 +159,8 @@
       <!-- Tab More -->
       <div role="tabpanel" class="tab-pane" id="more">
         <br />
-        Coming Soon ...</div>
+        Coming Soon ...
+      </div>
     </div>
     <!-- End Tab panes -->
 
