--- a/www/index.html
+++ b/www/index.html
@@ -32,22 +32,92 @@
     </div>
   </nav>
 
-  <div class="starter-template">
-    <div class="navbar-form" id="content-page">
-      <!--div class="form-group" >
-        <span ng-repeat-start="e in object.elements"></span> 
-        <label>{{e.label}} :</label>
-        <input class="form-control" ng-repeat-end type ="text" name="{{e.name}}" size="{{e.length}}" ng-model="input[e.name]" placeholder="Please input {{e.name}}">
-      </div>
-      <button type="submit" ng-click="on_submit()" class="btn btn-default">Submit Query</button-->
+  <div class="navbar-form" id="content-page">
+    <!--div class="form-group" >
+      <span ng-repeat-start="e in object.elements"></span> 
+      <label>{{e.label}} :</label>
+      <input class="form-control" ng-repeat-end type ="text" name="{{e.name}}" size="{{e.length}}" ng-model="input[e.name]" placeholder="Please input {{e.name}}">
     </div>
+    <button type="submit" ng-click="on_submit()" class="btn btn-default">Submit Query</button-->
   </div>
 
   <!-- Visulization Component -->  
   <!-- Control Panel -->
-  <div class="container-fluid">
+  
+    <nav id="navbar-example" class="navbar navbar-default navbar-static">
+      <div class="container-fluid">       
+        <div class="collapse navbar-collapse bs-example-js-navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a id="drop1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                Display Attributes
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="drop1">
+                <li>
+                  <a href="">
+                    <div class="input-group">
+                      <span class="input-group-addon">Node Labels : </span>
+                      <select id="node_label_filtering" multiple="multiple">
+                      </select>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <div class="input-group">
+                      <span class="input-group-addon">Edge Labels : </span>
+                      <select id="edge_label_filtering" multiple="multiple">   
+                      </select>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a id="drop2" href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                Selection
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="drop2">
+                <li>
+                  <a href="" id="b_highlightingNodes" onclick="highlightingNodes()">Highlight</a>
+                </li>
+                <li >
+                  <a href="" onclick="hidingNodes()">Hide</a>
+                </li>
+                <li>    
+                   <a href="" id="colorpicker" data-color="rgb(255, 0, 0)">
+                      Change Color
+                   </a>
+                </li>
 
-    <!-- first row for node action-->
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li id="fat-menu" class="dropdown">
+              <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                Graph Layout
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="drop3">
+                <li><a href="" onclick="console.log('test')">Force layout</a></li>
+                <li><a href="" onclick="console.log('test')">Tree layout</a></li>
+                <li><a href="" onclick="console.log('test')">Hierarchical layout</a></li>
+                <li><a href="" onclick="console.log('test')">Circle layout</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.nav-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+  <!-- old -->
+  <!--
+  <div class="container-fluid">
+    
+    <!-- first row for node action
     <div class="row">
         <div class="col-md-4"> 
         <div class="input-group">
@@ -57,9 +127,9 @@
         </div>
       </div>
       <div class="col-md-6">
-        <!--key press event will be assigned in document.ready()-->
+        <key press event will be assigned in document.ready()>
         <input id="selectionCondition" type="text" class="form-control" placeholder="Enter selection condition">
-        <!--/form-->
+
       </div>
       <div class="col-md-2"> 
         <select class="form-control" id="selectionType">
@@ -68,8 +138,9 @@
         </select>
       </div>
     </div>
+    -->
 
-    <!-- second row for edge action -->
+    <!-- second row for edge action >
     <div class="row">
       <div class="col-md-4"> 
         <div class="input-group">
@@ -109,10 +180,10 @@
         </select>
       </div>
     </div>  
+    
 
   </div>
-
-  <br />
+  -->
 
   <!-- Tabs Area-->
   <div role="tabpanel" id="tapView">
