--- a/www/index.html
+++ b/www/index.html
@@ -43,18 +43,15 @@
 
   <!-- Visulization Component -->  
   <!-- Control Panel -->
-  
   <nav id="navbar-example" class="navbar navbar-default navbar-static">
     <div class="container-fluid">       
       <div class="collapse navbar-collapse bs-example-js-navbar-collapse">
         <ul class="nav navbar-nav">
           <li>                    
             <a href="">
-              <div class="input-group">
                 Node Labels :
                 <select id="node_label_filtering" multiple="multiple">
                 </select>
-              </div>
             </a>
           </li>
           <li>
@@ -66,8 +63,8 @@
           </li>
           <li class="dropdown">
             <a id="drop2" href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              Selection
-              <span class="caret"></span>
+                Selection
+                <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" aria-labelledby="drop2">
               <li>
@@ -92,10 +89,10 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" aria-labelledby="drop3">
-              <li><a href="" onclick="console.log('test')">Force layout</a></li>
-              <li><a href="" onclick="console.log('test')">Tree layout</a></li>
-              <li><a href="" onclick="console.log('test')">Hierarchical layout</a></li>
-              <li><a href="" onclick="console.log('test')">Circle layout</a></li>
+              <li><a href="" onclick="layoutChanged('force')">Force layout</a></li>
+              <li><a href="" onclick="layoutChanged('tree')">Tree layout</a></li>
+              <li><a href="" onclick="layoutChanged('hierarchical')">Hierarchical layout</a></li>
+              <li><a href="" onclick="layoutChanged('circle')">Circle layout</a></li>
             </ul>
           </li>
         </ul>
