Change the UI layout for new UI component.

--- a/www/index.html
+++ b/www/index.html
@@ -181,8 +181,18 @@
 
       <br />
       <!-- Layout Port -->
-      <div id="layoutport" class="row">
-        Something.
+      <div id="layoutport" class="row" style="">
+        <div id="layoutProperty" style="width:90%;height:40%;" align="right">
+        </div>
+        <div id="tableBox" style="overflow:auto;width:97%;height:60%">  
+          <table class="table table-hover" id="tableInformation">
+            <tr>
+              <th>Firstname</th>
+              <th>Lastname</th> 
+              <th>Points</th>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
     <!-- End Right Side -->
